--- a/src/components/CurrentSong.css
+++ b/src/components/CurrentSong.css
@@ -7,10 +7,11 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: linear-gradient(blue, black 50%);
 }
 
 .artwork {
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
@@ -23,4 +24,14 @@
 
 .details {
   margin: 20px 0px;
+}
+
+.library-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border-radius: 5px;
+  background-color: #023047;
+  color: white;
+  padding: 10px 20px;
 }
