--- a/src/components/LibrarySong.css
+++ b/src/components/LibrarySong.css
@@ -1,21 +1,33 @@
 .song-container {
   margin: 10px 0px;
+  padding: 10px;
   display: flex;
 }
 
 .song-container:hover {
   cursor: pointer;
-  background-color: rgba(0, 204, 255, 0.137);
+  background-color: #caf0f8;
 }
 
 .song-image {
-  width: 50%;
+  width: 75px;
+  height: 75px;
 }
 
 .song-details {
+  padding: 10px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+}
+
+.song-song {
+  font-size: 20px;
+  color: #000000;
+}
+
+.song-artist {
+  font-size: 14px;
+  color: #555555;
 }
