--- a/src/App.css
+++ b/src/App.css
@@ -14,20 +14,14 @@ button {
   padding: 0;
   width: auto;
   overflow: visible;
-
-  background: transparent;
-
-  /* inherit font & color from ancestor */
   color: inherit;
   font: inherit;
-
-  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
   line-height: normal;
-
-  /* Corrects font smoothing for webkit */
   -webkit-font-smoothing: inherit;
   -moz-osx-font-smoothing: inherit;
-
-  /* Corrects inability to style clickable `input` types in iOS */
   -webkit-appearance: none;
+  background-color: #023047;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
