added more songs, updated styling, added animations

--- a/src/components/CurrentSong.css
+++ b/src/components/CurrentSong.css
@@ -25,3 +25,19 @@
 .details {
   margin: 20px 0px;
 }
+
+.spinning {
+  animation: spinning-record;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes spinning-record {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
