--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,16 @@ button {
   -webkit-appearance: none;
   background-color: #023047;
   color: white;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border-radius: 5px;
+}
+
+.app-container {
+  height: 100vh;
+  display: grid;
+  grid-template-areas:
+    "navbar"
+    "song"
+    "player";
+  grid-template-rows: 100px 1fr 150px;
 }
