--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -1,47 +1,42 @@
 .player-container {
+  grid-area: player;
   width: 100%;
-  padding: 20px 0px;
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  justify-content: center;
+  height: 100%;
+  align-self: center;
 }
 
 .player {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 50%;
-  height: 100px;
+  justify-content: space-evenly;
 }
 
 .player-controls {
+  margin: 0 auto;
   display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  font-size: 3rem;
+  justify-content: space-between;
+  width: 250px;
+  font-size: 2.5rem;
 }
 
 .timeline-container {
+  margin: 0 auto;
+  width: 500px;
   display: flex;
-  justify-content: space-between;
-}
-
-.song-timeline {
-  width: 80%;
+  justify-content: center;
 }
 
 .song-slider {
   -webkit-appearance: none;
   margin: 10px 0;
-  width: 80%;
+  width: 100%;
 }
 
 .song-slider::-webkit-slider-runnable-track {
   width: 100%;
   height: 5px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
   background: #2497e3;
   border-radius: 1px;
@@ -65,7 +60,6 @@
   width: 100%;
   height: 5px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
   background: #2497e3;
   border-radius: 1px;
@@ -84,7 +78,6 @@
   width: 100%;
   height: 5px;
   cursor: pointer;
-  animate: 0.2s;
   background: transparent;
   border-color: transparent;
   color: transparent;
@@ -118,8 +111,9 @@
   background: #2497e3;
 }
 
-@media (max-width: 800px) {
-  .player {
-    width: 95%;
+@media (max-width: 500px) {
+  .player-controls,
+  .timeline-container {
+    width: 80%;
   }
 }
