--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -12,6 +12,10 @@
   justify-content: space-evenly;
 }
 
+.player-time {
+  margin: 0px 20px;
+}
+
 .player-controls {
   margin: 0 auto;
   display: flex;
